--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://umair7.github.io/Google-Keeper-Replica/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -36,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "tailwindcss": "^3.3.1"
   }
 }
